[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-training"
version = "1.0.0"
description = "Reinforcement Learning Training Framework with Tianshou"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tianshou>=1.0.0",
    "gymnasium>=0.29.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pygame>=2.0.0",
    "matplotlib>=3.5.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
# Continuous control environments
mujoco = [
    "mujoco>=3.0.0",
    "gymnasium[mujoco]>=0.29.0",
]
pybullet = [
    "pybullet>=3.2.6",
    "gymnasium>=0.29.0",
]

# Experiment tracking
tracking = [
    "wandb>=0.15.0",
    "mlflow>=2.0.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

# All extras
all = [
    "rl-training[mujoco]",
    "rl-training[pybullet]",
    "rl-training[tracking]",
    "rl-training[dev]",
]

[project.scripts]
rl-train = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/rl-training"
Repository = "https://github.com/yourusername/rl-training.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 100
extend-exclude = ["__pycache__", ".venv", "venv"]
ignore = ["E203", "W503"]
